Avanses numero 2, sección de cards y image section :)

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
             <div class="main-exchange-container-title">
                 <h2>Visibilizamos todas las tasas de cambio.</h2>
                 <p>
-                    Traemos información en tiempo real de las casas de 
+                    Traemos información en tiempo real de las casas de
                     cambio y las monedas más importantes del mundo.
                 </p>
             </div>
 
             <!-- La siguiente sección no la hice con grid porque quería practicar tablas -->
-            
+
             <section class="tables-container">
                 <div class="main-currency-table">
                     <p class="currency-table--title">Monedas</p>
@@ -69,8 +69,54 @@
                 <div></div>
             </section>
         </section>
-        <section></section>
-        <section></section>
+        <section class="main-product-detail">
+            <span class="product-detail--batata-logo"></span>
+            <div class="product-detail--title">
+                <h2>Creamos un producto sin comparación.</h2>
+                <p>Confiable y diseñado para su uso diario.</p>
+            </div>
+            <section class="product-cards--container">
+                <article class="product-detail--card">
+                    <span class="icon clock"></span>
+                    <p class="product--card-title">Tiempo real</p>
+                    <p class="product--card-body">
+                        Nuestra API toma información minuto a
+                        minuto sobre las tasas que más determinan el comportamiento.
+                    </p>
+                </article>
+                <article class="product-detail--card">
+                    <span class="icon eye"></span>
+                    <p class="product--card-title">No hay tasas escondidas</p>
+                    <p class="product--card-body">
+                        Ni en la compra o al momento de exit, 
+                        Batatabit siempre te muestra el costo
+                        real de lo que estás adquiriendo.
+                    </p>
+                </article>
+                <article class="product-detail--card">
+                    <span class="icon money"></span>
+                    <p class="product--card-title">Compra monedas</p>
+                    <p class="product--card-body">
+                        No más rumores, con Batatabit sabrás
+                        el valor real de cada moneda en el 
+                        marcada actual.
+                    </p>
+                </article>
+                <article class="product-detail--card">
+                    <span class="icon check"></span>
+                    <p class="product--card-title">Información confiable</p>
+                    <p class="product--card-body">
+                        Nuestras fuentes están 100%
+                        verificadas y continuamos
+                        auditando su contenido mientras
+                        se actualizan.
+                    </p>
+                </article>
+            </section>
+        </section>
+        <section class="bitcoin-img-container">
+            <h2>Conocelo hoy</h2>
+        </section>
         <section></section>
     </main>
     <footer></footer>
